# Tonbandgeraet

./: .clang-format  .clangd  .editorconfig  .gitattributes  .gitignore  .ignore  FreeRTOS_trace.options  FreeRTOS_trace.proto  README.md  justfile
.github/actions/setup-mdbook-linkcheck2/: action.yml
.github/workflows/: ci-build-examples.yml  ci-codegen.yml  ci-conv.yml  ci-target.yml  ci-tband.yml  ci-tools.yml  ci-web-publish.yml  ci-web.yml  ci.yml  frtrace-conv-test.yml  frtrace-unit-test.yml
Example_STM32_FW/: CMakeLists.txt  FreeRTOS_Integration.ioc  README.md  STM32L476RGTx_FLASH.ld
Example_STM32_FW/Application/: app.c
Example_STM32_FW/Core/Inc/: FreeRTOSConfig.h  main.h  stm32l4xx_it.h
Example_STM32_FW/Core/Src/: main.c  static_mem.c  stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c  syscalls.c  tracing_backend.c
Example_STM32_FW/Libs/FreeRTOS/: queue.c
Example_STM32_FW/Libs/FreeRTOS/Source/portable/GCC/ARM_CM4F/: port.c
Example_STM32_FW/Libs/FreeRTOS/include/: FreeRTOS.h
code_gen/: __main__.py  c_file_header.h  gen_c_encoder.py  gen_rs_decoder.py  model.py  rs_file_header.rs
code_gen/c_encoder/: gen_c_encoder.py
code_gen/c_tests/: gen_c_tests.py
code_gen/code_gen/: __main__.py  model.py
code_gen/code_gen/c_encoder/: footer.h  gen_c_encoder.py  header.h
code_gen/code_gen/c_tests/: gen_c_tests.py  header.h
code_gen/code_gen/rs_decoder/: gen_rs_decoder.py  header.rs
code_gen/rs_decoder/: gen_rs_decoder.py
codegen/: pyproject.toml  run.bash
codegen/codegen/: __main__.py  utils.py
codegen/codegen/c_encoder/: footer.h  header.h
codegen/codegen/c_tests/: gen_c_tests.py  header.h
codegen/codegen/md_docs/: gen_md_docs.py  header.md
codegen/codegen/rs_decoder/: gen_rs_decoder.py  header.rs
conv/: rustfmt.toml
conv/synthetto/: Cargo.toml
conv/synthetto/src/: lib.rs  perfetto_trace_minimal.proto
conv/tband-cli/: Cargo.toml
conv/tband-cli/src/: open.rs
conv/tband-cli/src/cli/: cmd_convert.rs  cmd_dump.rs  cmd_serve.rs  mod.rs
conv/tband-conv/: Cargo.toml
converter/: trace_converter.py
converter/protos/: FreeRTOS_trace_pb2.py  FreeRTOS_trace_pb2.pyi
docs/: SUMMARY.md  book.toml  intro.md  update_cli_help.bash
docs/doc/: .md  config.md  dropped_evts.md  evtmarkers.md  external_backend.md  freertos.md  freertos_resources.md  freertos_task_local_markers.md  freertos_tasks.md  getting_started.md  handling.md  inclusion.md  instrumentation.md  interrupts.md  metadata_buf.md  multicore_support.md  porting.md  porting_critical_sections.md  postmortem.md  snapshot.md  streaming.md  tband_cli.md  valmarkers.md  viewing.md  web.md
docs/doc/cli_help/: compl.txt  conv.txt  dump.txt  main.txt
docs/tech_details/: bin_event_fields.md  bin_events.md  cobs.md  codegen.md  rust.md  synthetto.md  techstack.md  trace_format.md  varlen.md  wasm.md
examples/: .gitignore
examples/POSIX_FreeRTOS/: CMakeLists.txt  log
examples/POSIX_FreeRTOS/inc/: FreeRTOSConfig.h  tband_config.h  tband_port.h
examples/POSIX_FreeRTOS/src/: app.c  main.c
examples/STM32L476RGT6/: .gitignore  .mxproject  CMakeLists.txt  FreeRTOS_Integration.ioc  justfile
examples/STM32L476RGT6/Application/: app.c
examples/STM32L476RGT6/cmake/: gcc-arm-none-eabi.cmake
examples/STM32L476RGT6/cmake/stm32cubemx/: CMakeLists.txt
examples/STM32L476RGT6_FreeRTOS/: .clangd  .editorconfig  .mxproject  CMakeLists.txt  FreeRTOS_Integration.ioc  justfile
examples/STM32L476RGT6_FreeRTOS/Application/: app.c  app.h
examples/STM32L476RGT6_FreeRTOS/Core/Inc/: FreeRTOSConfig.h  main.h  stm32l4xx_hal_conf.h  tband_config.h
examples/STM32L476RGT6_FreeRTOS/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
frtrace-conv/: Cargo.toml
frtrace-conv/frtrace-cli/: Cargo.toml
frtrace-conv/frtrace-cli/src/: open.rs
frtrace-conv/frtrace-cli/src/cli/: cmd_completion.rs  cmd_convert.rs  mod.rs
frtrace-conv/frtrace-conv/: Cargo.toml
frtrace-conv/frtrace-conv-cli/: Cargo.toml  log
frtrace-conv/oldpy/: trace_converter.py
frtrace-conv/synthetto/: build.rs  justfile
frtrace-target/: .clang-format
frtrace-target/core/: frtrace.c  frtrace.h  frtrace_backend.c  frtrace_encode.h  frtrace_hooks.h
frtrace-target/tests/: CMakeLists.txt  justfile  run_tests.py  test_cobs_framing.c  test_varint_enc.c
frtrace-target/tests/mocks/inc/: FreeRTOSConfig.h  frtrace_port.h  function_mocks.h
frtrace-target/tests/mocks/src/: function_mocks.c
frtrace-target/tests/test_cobs_framing/: test.c
frtrace-target/tests/test_encoding_funcs/: frtrace_test_config.h  test.c
frtrace-target/tests/test_varint_enc/: test.c
frtrace-web/: justfile
frtrace-web/frtrace-wasm/: Cargo.toml
frtrace-web/website/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
scripts/: freertos_checkout_main.bash  freertos_checkout_v10_3_1.bash  freertos_checkout_v11_1_0.bash  freertos_clone.bash  generate_web_demo_traces.bash
tband/: LICENSE
tband/inc/: tband.h  tband_encode.h  tband_freertos.h  tband_hooks.h  tband_internal.h
tband/src/: tband.c  tband_backend.c  tband_freertos.c
tband/tests/: CMakeLists.txt  justfile
tband/tests/mocks/inc/: portmacro.h  tband_port.h
tband/tests/mocks/src/: function_mocks.c
tband/tests/test_cobs_framing/: test.c
tband/tests/test_encoding_funcs/: test.c
tband/tests/test_freertos_compat/: FreeRTOSConfig.h  function_mocks.h
tband/tests/test_varint_enc/: tband_test_config.h  test.c
tests/: build_examples.bash
tests/baremetal_integration/: .gitignore  check.py  run.bash  test.bash
tests/baremetal_integration/simulated_target/: CMakeLists.txt  main.c  mocks.c  mocks.h  tband_config.h  tband_port.h
tests/freertos_integration/: run.bash
tests/unit_test/: CMakeLists.txt  run.bash
tools/: Cargo.toml
tools/tband-cli/: Cargo.toml
tools/tband-conv/: Cargo.toml
tracer/: tracer.c  tracing_hooks.h
tracer/protos/: FreeRTOS_trace.pb.c  FreeRTOS_trace.pb.h  pb.h
web/: justfile
web/tband-wasm/: Cargo.toml
web/tband-wasm/src/: lib.rs
web/website/: index.html  package-lock.json  package.json  vite.config.js
(+88 files in other folders)
