[package]
name = "tband-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", default-features = false, features = ["http1", "tokio"] }
clap = { version = "4.5.7", features = ["derive"] }
clap_complete = "4.5.6"
colored = "2.1.0"
env_logger = "0.11.3"
tband_conv = { path = "../tband-conv" }
lazy_static = "1.4.0"
log = "0.4.21"
regex = "1.10.5"
tokio = "1.38.0"
webbrowser = "1.0.1"
