[package]
name = "frtrace-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
clap_complete = "4.5.6"
colored = "2.1.0"
env_logger = "0.11.3"
frtrace_conv_core = { path = "../frtrace-conv" }
lazy_static = "1.4.0"
log = "0.4.21"
regex = "1.10.5"
rouille = { version = "3.6.2", default-features = false }
webbrowser = "1.0.1"
