[package]
name = "tband_wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.84"}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# console_error_panic_hook = { version = "0.1.7", optional = true }

tband_conv = { path = "../../tools/tband-conv" }
log = { version = "0.4.21", features = ["std"] }
console_log = "1.0.0"
web-sys = { version = "0.3.69", features = ["Document", "Window", "Element", "HtmlElement", "HtmlDivElement", "CustomEvent", "CustomEventInit"] }
serde = { version = "1.0.203", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
anyhow = "1.0.86"
console_error_panic_hook = "0.1.7"


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
